Used Vue component

--- a/resources/sass/_notfound.scss
+++ b/resources/sass/_notfound.scss
@@ -6,7 +6,7 @@ $t-purple: #8C8AA7;
 $pink: #FF5E65;
 $white: #fff;
 
-html,
+//*html,*
 body {
     background: $purple;
     font-family: 'Ubuntu';
